271 show name tag and glowing packet events (#649)
* added dependency

* fixed tablist error

* glowManager implementation copied over

* added to config

* added PacketEvents initialize and teardown code to Main.java

* added logic to ad/remove players and admins to/from the glowManager

* set up removing admins from GlowManager

* implemented glowing logic on player leave/join and start/stop

* renamed main UI exception

* moved UI exception

* fixed missing removal in description

* removed logg statement

* fixed login and distance

* removed unused config

* mocked PacketEventsAPI

* docmented